--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,8 @@
 
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
+
+
+
+The Editing of this project by an ALX students for the AirBnb_clone_v2 
+Kawtar El khoumani <kawtar.elkhoumani@outlook.com>
